--- a/training/templates/training/training_detail.html
+++ b/training/templates/training/training_detail.html
@@ -15,7 +15,7 @@
               <div class="col-12">
                 <div class="ratio ratio-16x9">
                   <iframe width="560" height="315"
-                          src="{{ training.video_embed_url }}"
+                          src="{{ training.video_embed_url }}?rel=0"
                           title="YouTube video player"
                           frameborder="0"
                           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
