--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -46,7 +46,7 @@
                   </a>
                   <ul class="headerarea__submenu d-flex flex-column">
                     <li><a href="{% url 'blog_list' %}">Blog Posts</a></li>
-                    <li><a href="#">Video Posts</a></li>
+                    <li><a href="{% url 'vlog_list' %}">Video Posts</a></li>
                   </ul>
                 </li>
 
