--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -37,7 +37,7 @@
       <form method="get" class="mb-5 text-center">
         <div class="input-group mx-auto" style="max-width: 400px;">
             <input type="text" name="q" class="form-control"
-                placeholder="Search vlogs by title..."
+                placeholder="Search blogs by title..."
                 value="{{ search_query }}">
             <button class="btn btn-primary" type="submit">
             <i class="icofont-search-2"></i>
