--- a/intern/templates/intern/intern_list.html
+++ b/intern/templates/intern/intern_list.html
@@ -2,7 +2,7 @@
 {% load static i18n %}
 {% comment %} {% block title %}Internships List{% endblock %} {% endcomment %}
 {% block content %}
-{% include 'partials/theme-switch.html' %}
+{% comment %} {% include 'partials/theme-switch.html' %} {% endcomment %}
 
 <main class="main_wrapper overflow-hidden">
   {% include 'partials/top-banner.html' %}
