--- a/training/templates/training/training_list.html
+++ b/training/templates/training/training_list.html
@@ -118,7 +118,7 @@
   </div>
 
   <div class="zoom__meetings sp_top_100 sp_bottom_70">
-    <div class="container-fluid full__width__padding">
+    <div class="container full__width__padding">
       <div class="row">
         {% for training in trainings %}
         <div class="col-xxl-3 col-xl-4 col-lg-6 col-md-6 col-sm-6 col-12" data-aos="fade-up">    
