--- a/courses/templates/courses/course-list.html
+++ b/courses/templates/courses/course-list.html
@@ -182,7 +182,10 @@
                             <div class="gridarea__wraper gridarea__wraper__2 gridarea__course__list" data-aos="fade-up">
                                 <div class="gridarea__img">
                                     <a href="{% url 'course_detail' course.slug %}">
-                                        <img loading="lazy" src="{{ course.thumbnail.url }}" alt="{{ course.title }}">
+                                        {% if course.thumbnail %}
+                                            <img loading="lazy" src="{{ course.thumbnail.url }}" alt="{{ course.title }}">
+                                        {% endif %}
+                                        
                                     </a>
                                     <div class="gridarea__small__button">
                                         <div class="grid__badge">{{ course.category.name }}</div>
