--- a/intern/templates/intern/intern_list.html
+++ b/intern/templates/intern/intern_list.html
@@ -54,14 +54,14 @@
           </tr>
         </thead>
         <tbody>
-          {% for training in trainings %}
+          {% for intern in interns %}
           <tr>
-            <td>{{ training.name }}</td>
-            <td>{{ training.get_medium_display }}</td>
-            <td>{{ training.date|date:"M d, Y" }}</td>
+            <td>{{ intern.name }}</td>
+            <td>{{ intern.get_medium_display }}</td>
+            <td>{{ intern.date|date:"M d, Y" }}</td>
             <td>
-              {% if training.registration_link %}
-                <a href="{{ training.registration_link }}" class="btn btn-sm btn-success" target="_blank">Register</a>
+              {% if intern.registration_link %}
+                <a href="{{ intern.registration_link }}" class="btn btn-sm btn-success" target="_blank">Register</a>
               {% else %}
                 <span class="text-muted">TBA</span>
               {% endif %}
@@ -77,18 +77,18 @@
     </div>
 
     <!-- Detailed List -->
-  {% for training in trainings %}
+  {% for intern in interns %}
     <div class="row mb-5 border-bottom p-4 align-items-center shadow-lg">
       <div class="col-md-6">
-        <h4>{{ training.name }}</h4>
-        <p class="mt-3 text-justify" style="text-align: justify;">{{ training.summary }}</p>
+        <h4>{{ intern.name }}</h4>
+        <p class="mt-3 text-justify" style="text-align: justify;">{{ intern.summary }}</p>
         
         <div class="d-flex justify-content-between align-items-center mt-3">
-          <a href="{% url 'training_detail' training.slug %}" class="btn btn-outline-primary">
+          <a href="{% url 'intern_detail' intern.slug %}" class="btn btn-outline-primary">
             Details
           </a>
-          {% if training.registration_link %}
-            <a href="{{ training.registration_link }}" class="btn btn-success" target="_blank">
+          {% if intern.registration_link %}
+            <a href="{{ intern.registration_link }}" class="btn btn-success" target="_blank">
               Register
             </a>
           {% else %}
@@ -99,7 +99,7 @@
 
       <div class="col-md-6 mt-4 mt-md-0">
         <div class="ratio ratio-16x9">
-          <iframe width="560" height="315" src="{{ training.video_embed_url }}" 
+          <iframe width="560" height="315" src="{{ intern.video }}" 
                   title="YouTube video player" frameborder="0"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                   referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
