--- a/courses/templates/courses/course-list.html
+++ b/courses/templates/courses/course-list.html
@@ -153,20 +153,6 @@
                                                     <span class="text-success small">Free</span>
                                                 {% endif %}
                                             </div>
-                                            {% comment %} <div class="gridarea__bottom">
-                                                <a href="#">
-                                                    <div class="gridarea__small__img">
-                                                        {% if course.instructor.profile_picture %}
-                                                            <img loading="lazy" src="{{ course.instructor.profile_picture.url }}" alt="instructor">
-                                                        {% else %}
-                                                            <img loading="lazy" src="{% static 'img/profile.png' %}" alt="instructor">
-                                                        {% endif %}
-                                                        <div class="gridarea__small__content">
-                                                            <h6>{{ course.instructor }}</h6>
-                                                        </div>
-                                                    </div>
-                                                </a>
-                                            </div> {% endcomment %}
                                             <div class="gridarea__bottom">
                                                 {% with first_instructor=course.instructor.all|first %}
                                                 {% if first_instructor %}
@@ -223,7 +209,7 @@
                                     <div class="gridarea__heading">
                                         <h3><a href="{% url 'course_detail' course.slug %}">{{ course.title }}</a></h3>
                                     </div>
-                                    <div class="gridarea__price">
+                                    <div class="gridarea__price mt-2">
                                         ৳{{ course.price }} {% if course.original_price %}<del>/ ৳{{ course.original_price }}</del>{% endif %}
                                         {% if course.price > 0 %}
                                             <span class="text-danger small"></span>
@@ -233,18 +219,22 @@
                                     </div>
                                     <div class="gridarea__bottom">
                                         <div class="gridarea__bottom__left">
+                                            {% with first_instructor=course.instructor.all|first %}
+                                            {% if first_instructor %}
                                             <a href="#">
                                                 <div class="gridarea__small__img">
-                                                        {% if course.instructor.profile_picture %}
-                                                            <img loading="lazy" src="{{ course.instructor.profile_picture.url }}" alt="instructor">
+                                                        {% if first_instructor.profile_picture %}
+                                                            <img loading="lazy" src="{{ first_instructor.profile_picture.url }}" alt="instructor" width="50" height="50" style="max-width: fit-content;">
                                                         {% else %}
                                                             <img loading="lazy" src="{% static 'img/profile.png' %}" alt="instructor">
                                                         {% endif %}
                                                     <div class="gridarea__small__content">
-                                                        <h6>{{ course.instructor }}</h6>
+                                                        <h6>{{ first_instructor }}</h6>
                                                     </div>
                                                 </div>
                                             </a>
+                                            {% endif %}
+                                            {% endwith %}
                                         </div>
                                         <div class="gridarea__details">
                                             <a href="{% url 'course_detail' course.slug %}">Details
