--- a/courses/templates/courses/course-list.html
+++ b/courses/templates/courses/course-list.html
@@ -206,7 +206,7 @@
                                             <li><i class="icofont-clock-time"></i> {{ course.total_duration }} min</li>
                                         </ul>
                                     </div>
-                                    <div class="gridarea__heading">
+                                    <div class="gridarea__heading mb-4">
                                         <h3><a href="{% url 'course_detail' course.slug %}">{{ course.title }}</a></h3>
                                     </div>
                                     <div class="gridarea__price mt-2">
