--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -36,7 +36,18 @@
               <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="{% url 'course_list' %}">Short Courses</a></li>
-                <li><a href="{% url 'training_list' %}">Training</a></li>
+                {% comment %} <li><a href="{% url 'training_list' %}">Training</a></li> {% endcomment %}
+
+                <li>
+                  <a class="headerarea__has__dropdown" href="#">Training
+                    <i class="icofont-rounded-down"></i>
+                  </a>
+                  <ul class="headerarea__submenu d-flex flex-column">
+                    <li><a href="{% url 'training_list' %}">Offline</a></li>
+                    <li><a href="{% url 'training_list' %}">Online</a></li>
+                  </ul>
+                </li>
+
                 <li><a href="{% url 'intern_list' %}">Internship</a></li>
                 <li><a href="#">Thesis Support</a></li>
                 <li><a href="#">Collaboration</a></li>
