--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -44,7 +44,7 @@
                   </a>
                   <ul class="headerarea__submenu d-flex flex-column">
                     <li><a href="{% url 'training_list' %}">Offline</a></li>
-                    <li><a href="{% url 'training_list' %}">Online</a></li>
+                    <li><a href="{% url 'online_training_list' %}">Online</a></li>
                   </ul>
                 </li>
 
