--- a/training/templates/training/training_detail.html
+++ b/training/templates/training/training_detail.html
@@ -31,18 +31,96 @@
                     <div class="course__list__wraper" data-aos="fade-up">
                       <!-- Details Section -->
                       <h2 class="mb-3">{{ training.name }}</h2>
-                      
-                      <div class="mt-4" style="text-align: justify;">
-                        {{ training.description|safe }}
-                      </div>
 
-                      <div class="mt-4">
-                        {% if training.registration_link %}
-                          <a href="{{ training.registration_link }}" target="_blank" class="btn dawn-blue-bg">Registration Now</a>
-                        {% else %}
-                          <button class="btn btn-secondary" disabled>Registration TBA</button>
-                        {% endif %}
+                      <div class="mt-4" style="text-align: justify;">
+                        {{ training.summary }}
                       </div>
+                      
+                      <div class="course__details__tab__wrapper" data-aos="fade-up">
+                            <div class="row">
+                                <div class="col-xl-12">
+                                    <ul class="nav  course__tap__wrap" id="myTab" role="tablist">
+                                        <li class="nav-item" role="presentation">
+                                            <button class="single__tab__link" data-bs-toggle="tab"
+                                                data-bs-target="#projects__three" type="button">
+                                                <i class="icofont-ui-note"></i>Description
+                                            </button>
+                                        </li>
+                                        <li class="nav-item" role="presentation">
+                                            <button class="single__tab__link" data-bs-toggle="tab"
+                                                data-bs-target="#projects__four" type="button"><i
+                                                    class="icofont-teacher"></i>Instructor</button>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+
+                            <div class="tab-content tab__content__wrapper" id="myTabContent">
+                              
+                                <!-- Instructor -->
+                                <div class="tab-pane fade" id="projects__four" role="tabpanel" aria-labelledby="projects__four">
+                                    <div class="blogsidebar__content__wraper__2 tab__instructor">
+                                        {% for instructor in training.instructors.all %}
+                                        <div class="blogsidebar__content__inner__2 mb-3">
+
+                                            <div class="blogsidebar__img__2">
+                                                {% if instructor.profile_picture %}
+                                                    <img loading="lazy" src="{{ instructor.profile_picture.url }}" alt="profile" width="100">
+                                                {% else %}
+                                                    <img loading="lazy" src="{% static 'img/profile.png' %}" alt="profile" width="100">
+                                                {% endif %} 
+                                            </div>
+
+                                            <div class="tab__instructor__inner">
+                                                <div class="blogsidebar__name__2">
+                                                    <h5>
+                                                        <a href="#">{{ instructor.first_name }}</a>
+                                                    </h5>
+                                                </div>
+                                                <div class="blog__sidebar__text__2">
+                                                    <p>{{ instructor.bio }}</p>
+                                                </div>
+                                                <div class="blogsidbar__icon__2">
+                                                    <ul>
+                                                        <li>
+                                                            <a href="mailto:{{ instructor.email }}"><i class="icofont-email"></i></a>
+                                                        </li>
+                                                        {% if instructor.facebook_link %}
+                                                            <li>
+                                                                <a href="{{ instructor.facebook_link }}"><i class="icofont-facebook"></i></a>
+                                                            </li>
+                                                        {% endif %}
+                                                        {% if instructor.linkedin_link %}
+                                                            <li>
+                                                                <a href="{{ instructor.linkedin_link }}"><i class="icofont-linkedin"></i></a>
+                                                            </li>
+                                                        {% endif %}
+                                                        {% if instructor.website %}
+                                                            <li>
+                                                                <a href="{{ instructor.website }}"><i class="icofont-web"></i></a>
+                                                            </li>
+                                                        {% endif %}
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        {% endfor %}
+                                    </div>
+                                </div>
+                                <!-- Instructor -->
+
+                                <div class="tab-pane fade" id="projects__three" role="tabpanel"
+                                    aria-labelledby="projects__one">
+                                    <div class="experence__heading">
+                                        <h5>Description</h5>
+                                    </div>
+                                    <div class="experence__description">
+                                        {{ training.description|safe }}
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                      
                     </div>
                 </div>
             </div>
