--- a/training/templates/training/training_detail.html
+++ b/training/templates/training/training_detail.html
@@ -56,7 +56,6 @@
                             </div>
 
                             <div class="tab-content tab__content__wrapper" id="myTabContent">
-                              
                                 <!-- Instructor -->
                                 <div class="tab-pane fade" id="projects__four" role="tabpanel" aria-labelledby="projects__four">
                                     <div class="blogsidebar__content__wraper__2 tab__instructor">
@@ -122,6 +121,72 @@
                         </div>
                       
                     </div>
+
+
+                    <!-- comments section -->
+                    <div class="blog__details__comment">
+                        <div class="blog__details__comment__heading" data-aos="fade-up">
+                            <h5>({{ total_comments }}) Comment</h5>
+                        </div>
+                        
+                        {% for comment in comments %}
+                        <div class="blog__details__comment__inner" data-aos="fade-up">
+                            <div class="author__img">
+                                {% if comment.user.profile_picture %}
+                                    <img loading="lazy" src="{{ comment.user.profile_picture.url }}" alt="author" width="80">
+                                {% else %}
+                                    <img loading="lazy" src="{% static 'img/profile.png' %}" alt="author" width="80">
+                                {% endif %}
+                            </div>
+                            <div class="author__content">
+                                <div class="author__name">
+                                    <h6><a href="#">{{ comment.user.username }}</a></h6>
+                                    <p>{{ comment.created_at|date:"d F Y" }}</p>
+                                </div>
+                                <div class="author__text">
+                                    <p>{{ comment.content }}</p>
+                                    {% if request.user == comment.user %}
+                                        <form method="post" action="{% url 'delete_training_comment' comment.id %}" class="mt-2">
+                                            {% csrf_token %}
+                                            <button class="btn btn-sm btn-outline-danger">Delete</button>
+                                        </form>
+                                    {% endif %}
+                                </div>
+                            </div>
+                            <div class="author__icon">
+                                <button>
+                                    <svg width="26" height="19" viewBox="0 0 26 19" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M5.91943 10.2031L12.1694 16.4531C13.3413 17.625 15.3726 16.8047 15.3726 15.125V12.3516C19.9819 12.5469 20.0991 13.5625 19.4351 15.8672C18.9272 17.5469 20.8413 18.9141 22.2866 17.9375C24.2788 16.5703 25.3726 14.8516 25.3726 12.3516C25.3726 6.76562 20.3726 5.67188 15.3726 5.47656V2.66406C15.3726 0.984375 13.3413 0.164062 12.1694 1.33594L5.91943 7.58594C5.17725 8.28906 5.17725 9.5 5.91943 10.2031ZM7.24756 8.875L13.4976 2.625V7.3125C18.1851 7.3125 23.4976 7.58594 23.4976 12.3516C23.4976 14.5391 22.3647 15.6328 21.2319 16.375C22.8335 11.0625 18.8491 10.4375 13.4976 10.4375V15.125L7.24756 8.875ZM0.919434 7.58594C0.177246 8.28906 0.177246 9.5 0.919434 10.2031L7.16943 16.4531C7.95068 17.2734 9.12256 17.1562 9.82568 16.4531L2.24756 8.875L9.82568 1.33594C9.12256 0.632812 7.95068 0.515625 7.16943 1.33594L0.919434 7.58594Z"
+                                            fill="#121416" />
+                                    </svg>
+                                </button>
+                            </div>
+                        </div>
+                        {% endfor %}
+                    </div>
+
+                    {% if user.is_authenticated %}
+                    <form method="post" action="{% url 'add_comment_training' training.slug %}">{% csrf_token %}
+                        <div class="blog__details__form">
+                            <div class="blog__details__input__heading" data-aos="fade-up">
+                                <h5>Write your comment</h5>
+                            </div>
+                            <div class="row">
+                                <div class="col-xl-12" data-aos="fade-up">
+                                    <div class="blog__details__input">
+                                        <textarea cols="30" rows="10" name="content" placeholder="Enter your message*"></textarea>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="blog__details__button" data-aos="fade-up">
+                            <button class="default__button" type="submit">Post a Comment</button>
+                        </div>
+                    </form>
+                    {% endif %}
+                    <!-- comments section -->
                 </div>
             </div>
 
